# bevy_convex_mesh

./: Cargo.toml  README.md
src/: convex.rs  lib.rs  main.rs  triangle.rs
