[package]
name = "bevy_scene"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
bevy = { version = "0.12.0", features = ["dynamic_linking"] }
bevy_rapier3d = { version = "*", features = [ "simd-stable", "debug-render-3d" ] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1